display: flex element not ignore font (content) like as other browser engines. https://bugs.webkit.org/show_bug.cgi?id=254595

Reviewed by Antti Koivisto.

When the beforeChild of a newly inserted out-of-flow block box is nested inside
an anonymous flex item
e.g.

<flex container>this text content is wrapped inside an anonymous flex item</flex container>
and
flex container.insertChild("out-of-flow block box")

we should go with the original insertion position (flex container) instead of trying to put this block box next to the text content under the anon flex item.
The spec states that out-of-flow boxes should be (statically) positioned as if were the sole flex item in the flex container.
(https://www.w3.org/TR/css-flexbox-1/#abspos-items)

This also matches the behavior of when the out-of-flow box is not dynamically inserted.
e.g.
<flex container><out-of-flow></out-of-flow>this text content is wrapped inside an anonymous flex item</flex container>

* LayoutTests/fast/flexbox/out-of-flow-with-sibling-anon-flex-item-expected.html: Added.
* LayoutTests/fast/flexbox/out-of-flow-with-sibling-anon-flex-item.html: Added.
* Source/WebCore/rendering/updating/RenderTreeBuilderBlock.cpp:
(WebCore::RenderTreeBuilder::Block::attachIgnoringContinuation):

Canonical link: https://commits.webkit.org/262341@main