Source/WebCore/rendering/updating/RenderTreeBuilderBlock.cpp
@@ -178,8 +178,18 @@ void RenderTreeBuilder::Block::attachIgnoringContinuation(RenderBlock& parent, R
             // there is an anonymous container within this object that contains the beforeChild.
             RenderElement* beforeChildAnonymousContainer = beforeChildContainer;
             if (beforeChildAnonymousContainer->isAnonymousBlock()) {
-                // Insert the child into the anonymous block box instead of here.
-                if (child->isInline() || beforeChildAnonymousContainer->firstChild() != beforeChild)
+                auto mayUseBeforeChildContainerAsParent = [&] {
+                    if (child->isOutOfFlowPositioned() && beforeChildAnonymousContainer->isFlexItemIncludingDeprecated()) {
+                        // Do not try to move an out-of-flow block box under an anonymous flex item. It should stay a direct child of the flex container.
+                        // https://www.w3.org/TR/css-flexbox-1/#abspos-items
+                        // As it is out-of-flow, an absolutely-positioned child of a flex container does not participate in flex layout.
+                        // The static position of an absolutely-positioned child of a flex container is determined such that the
+                        // child is positioned as if it were the sole flex item in the flex container, 
+                        return false;
+                    }
+                    return child->isInline() || beforeChildAnonymousContainer->firstChild() != beforeChild;
+                };
+                if (mayUseBeforeChildContainerAsParent())
                     m_builder.attach(*beforeChildAnonymousContainer, WTFMove(child), beforeChild);
                 else
                     m_builder.attach(parent, WTFMove(child), beforeChild->parent());
